<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:padding="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:minHeight="80dp"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_margin="5dp"
                        android:background="@drawable/shape"
                        android:gravity="center">

                        <LinearLayout

                            android:id="@+id/settings"
                            android:focusable="true"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/settings"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="?attr/themeColor2"
                                android:gravity="center"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:layout_margin="5dp"
                        android:background="@drawable/shape"
                        android:gravity="center">

                        <LinearLayout
                            android:id="@+id/themm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/themes"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:gravity="center"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#757575"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="5dp">
                <LinearLayout
                    android:id="@+id/telGrm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:padding="8dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:paddingLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/telegram"
                            app:tint="?attr/themeColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="15sp"
                            android:textSize="18sp"
                            android:textColor="?attr/themeColor"
                            android:textStyle="bold"
                            android:text="@string/join_telegram" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/rateUs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/stars"
                            app:tint="?attr/themeColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="15sp"
                            android:textSize="18sp"
                            android:textColor="?attr/themeColor"
                            android:textStyle="bold"
                            android:text="@string/rate_us" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/privacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        >
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/privacy"
                            app:tint="?attr/themeColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="15sp"
                            android:textSize="18sp"
                            android:textColor="?attr/themeColor"
                            android:textStyle="bold"
                            android:text="@string/privacy_policy" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/About"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/about_30"
                            app:tint="?attr/themeColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="15sp"
                            android:textSize="18sp"
                            android:textColor="?attr/themeColor"
                            android:textStyle="bold"
                            android:text="@string/about" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/Exit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:padding="8dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:paddingLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/exit"
                            app:tint="?attr/themeColor" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingLeft="18sp"
                            android:textSize="18sp"
                            android:textColor="?attr/themeColor"
                            android:textStyle="bold"
                            android:text="@string/exit" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>